Added an Exam service to get the exam based on the examId
